# mercurial-jupyterbook

./: .hgignore  .mdformat.toml  .readthedocs.yaml  Makefile  README.md  pyproject.toml
book/: _config.yml  _toc.yml  hgrc4book  index.md
book/advanced-concepts/: changing-history.md  concepts.md  hook.md  scaling.md  template.md
book/appendix/: app-git.md  app-license.md  app-srcinstall.md  app-svn.md
book/daily-use/: files.md  hgext.md  undo.md
book/figs/: bad-merge-1.dot  bad-merge-2.dot  bad-merge-3.dot  bad-merge-4.dot  bad-merge-5.dot
book/getting-started/: intro.md  preface.md  tour-basic.md
book/working-together/: branch.md  collab.md  empty.md  merge.md
convert/: make_md_file.py  parse_test.py
convert/rst_files/: app-git.rst  app-license.rst  app-srcinstall.rst  app-svn.rst  branch.rst  changing-history.rst  collab.rst  concepts.rst  files.rst  hgext.rst  hook.rst  index.rst  intro.rst  merge.rst  part-advanced-concepts.rst  part-appendix.rst  part-daily-usage.rst  part-getting-started.rst  part-working-together.rst  preface.rst  scaling.rst  template.rst  tour-basic.rst  undo.rst
convert/test_files/: test-amend.t  test-app-git.t  test-backout.t  test-bisect.t  test-branch-named.t  test-branch-repo.t  test-branching.t  test-ch01-new.t  test-ch04-diff.t  test-ch04-resolve.t  test-ch09-hook.ws.t  test-ch10-multiline.t  test-ch11-qdelete.t  test-ch15-clonebundles.t  test-ch15-largefiles.t  test-ch15-remotefilelog.t  test-daily.copy.t  test-daily.files.t  test-daily.rename.t  test-daily.revert.t  test-extdiff.t  test-filenames.t  test-histedit.t  (+18 more)
(+5 files in other folders)
